--- a/build.gradle
+++ b/build.gradle
@@ -6,7 +6,8 @@ group 'org.example'
 version '1.0-SNAPSHOT'
 
 sourceCompatibility = 11
-
+compileJava.options.encoding = 'UTF-8'
+compileTestJava.options.encoding = 'UTF-8'
 
 
 repositories {
